--- a/docker/apache/conf/extra/httpd-vhosts.conf
+++ b/docker/apache/conf/extra/httpd-vhosts.conf
@@ -13,11 +13,11 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    DocumentRoot ${APACHE_ROOT_DIR}/valsports
-    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/valsports/$1"
+    DocumentRoot ${APACHE_ROOT_DIR}/valsports/pub
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/valsports/pub/$1"
     ServerName local.valsports.fr
     ServerAlias local.valsports.fr
-    <Directory ${APACHE_ROOT_DIR}/valsports>
+    <Directory ${APACHE_ROOT_DIR}/valsports/pub/>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
         Require all granted
