--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -49,7 +49,13 @@ services:
       - ./php/74/php.ini:${PHP_ROOT_DIR}/php/conf.d/php.ini
       - ../logs/php:${PHP_ROOT_DIR}/logs
       - ./php/composer/auth.json:/root/.composer/auth.json
+      - ./php/nginx/default:/etc/nginx/sites-enabled/default
     restart: always
+    healthcheck:
+      test: [ "CMD", "service", "nginx", "start" ]
+      interval: 10s
+      timeout: 2s
+      retries: 1
     environment:
       - PHP_ROOT_DIR=${PHP_ROOT_DIR}
       - WORK_ROOT_DIR=${WORK_ROOT_DIR}
@@ -80,7 +86,13 @@ services:
       - ./php/72/php.ini:${PHP_ROOT_DIR}/php/conf.d/php.ini
       - ../logs/php:${PHP_ROOT_DIR}/logs
       - ./php/composer/auth.json:/root/.composer/auth.json
+      - ./php/nginx/default:/etc/nginx/sites-enabled/default
     restart: always
+    healthcheck:
+      test: [ "CMD", "service", "nginx", "start" ]
+      interval: 10s
+      timeout: 2s
+      retries: 1
     environment:
       - PHP_ROOT_DIR=${PHP_ROOT_DIR}
       - WORK_ROOT_DIR=${WORK_ROOT_DIR}
@@ -111,7 +123,13 @@ services:
       - ./php/56/php.ini:${PHP_ROOT_DIR}/php/conf.d/php.ini
       - ../logs/php:${PHP_ROOT_DIR}/logs
       - ./php/composer/auth.json:/root/.composer/auth.json
+      - ./php/nginx/default:/etc/nginx/sites-enabled/default
     restart: always
+    healthcheck:
+      test: [ "CMD", "service", "nginx", "start" ]
+      interval: 10s
+      timeout: 2s
+      retries: 1
     environment:
       - PHP_ROOT_DIR=${PHP_ROOT_DIR}
       - WORK_ROOT_DIR=${WORK_ROOT_DIR}
