--- a/docker/apache/conf/extra/httpd-vhosts.conf
+++ b/docker/apache/conf/extra/httpd-vhosts.conf
@@ -29,12 +29,13 @@
     CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
 </VirtualHost>
 
+# holi deco
 <VirtualHost *:80>
-    DocumentRoot ${APACHE_ROOT_DIR}/aulp-amateis
-    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/aulp-amateis/$1"
-    ServerName local.aulp.fr
-    ServerAlias local.aulp.fr
-    <Directory ${APACHE_ROOT_DIR}/aulp-amateis>
+    DocumentRoot ${APACHE_ROOT_DIR}/holi-deco/pub
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/holi-deco/pub/$1"
+    ServerName local.holi-deco.com
+    ServerAlias local.holi-deco.com
+    <Directory ${APACHE_ROOT_DIR}/holi-deco/pub/>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
         Require all granted
@@ -47,11 +48,28 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    DocumentRoot ${APACHE_ROOT_DIR}/instinct_premium
-    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/instinct_premium/$1"
+    DocumentRoot ${APACHE_ROOT_DIR}/aulp-amateis/pub
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/aulp-amateis/pub/$1"
+    ServerName local.aulp.fr
+    ServerAlias local.aulp.fr
+    <Directory ${APACHE_ROOT_DIR}/aulp-amateis/pub>
+        Options +Indexes +Includes +FollowSymLinks +MultiViews
+        AllowOverride All
+        Require all granted
+        Allow from all
+    </Directory>
+
+    ErrorLog ${LOG_APACHE_ROOT_DIR}/main-error.log
+    LogLevel warn
+    CustomLog ${LOG_APACHE_ROOT_DIR}/main-access.log combined
+</VirtualHost>
+
+<VirtualHost *:80>
+    DocumentRoot ${APACHE_ROOT_DIR}/instinct_premium/pub
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/instinct_premium/pub/$1"
     ServerName local.instinct-premium
     ServerAlias local.instinct-premium
-    <Directory ${APACHE_ROOT_DIR}/instinct_premium>
+    <Directory ${APACHE_ROOT_DIR}/instinct_premium/pub>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
         Require all granted
@@ -124,14 +142,11 @@
 </VirtualHost>
 
 <VirtualHost *:80>
-    DocumentRoot ${APACHE_ROOT_DIR}/themosis2/htdocs
-    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/themosis2/htdocs/$1"
-    <LocationMatch ^(.*(?<!index)\.php)$>
-       ProxyPass fcgi://${PHP_72_IP}:9000${WORK_ROOT_DIR}/pays_devian_vallee_dabondance/htdocs/cms/$1
-    </LocationMatch>
-    ServerName local.test.docker.thomo2
-    ServerAlias local.test.docker.thomo2
-    <Directory ${APACHE_ROOT_DIR}/themosis2/htdocs>
+    DocumentRoot ${APACHE_ROOT_DIR}/europe-spa-vitrine/htdocs
+    ProxyPassMatch "^/(.*\.php)$" "fcgi://${PHP_74_IP}:9000${WORK_ROOT_DIR}/europe-spa-vitrine/htdocs/$1"
+    ServerName local.europe-spa.fr
+    ServerAlias europe-spa2021.ch
+    <Directory ${APACHE_ROOT_DIR}/europe-spa-vitrine/htdocs>
         Options +Indexes +Includes +FollowSymLinks +MultiViews
         AllowOverride All
         Require all granted
