--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -187,3 +187,12 @@ services:
     restart: always
     ports:
       - ${REDIS_EXPOSED_PORT}:6379
+  portainer:
+    image: portainer/portainer-ce
+    container_name: ${COMPOSE_PROJECT_NAME}_portainer
+    restart: always
+    ports:
+      - 8000:8000
+      - 9000:9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
